debugging font weight issue on mobile

--- a/src/components/sections/intro/intro.module.css
+++ b/src/components/sections/intro/intro.module.css
@@ -1,13 +1,3 @@
-.intro {
-
-}
-
-.header_firstname {
-    font-variation-settings: "wdth" 300;
-}
-.header_lastname {
-    font-variation-settings: "wdth" 105;
-}
 .version {
     -webkit-text-stroke: 1px #000;
     -webkit-text-fill-color: #fff;
